k8s/examples/ingress-limit-period.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # 5 reqs/second: "5-S"
    "guardgress/limit-period": "5-S"
    # 10 reqs/minute: "10-M"
    # "guardgress/limit-period": "10-M"
    # 1000 reqs/hour: "1000-H"
    # "guardgress/limit-period": "1000-H"
    # 2000 reqs/day: "2000-D"
    # "guardgress/limit-period": "2000-D"
  name: shop
  namespace: default
spec:
  ingressClassName: guardgress
  rules:
    - host: shop.guardgress.com
      http:
        paths:
          - backend:
              service:
                name: shop
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - shop.guardgress.com
      secretName: shop-tls
